2019-1/220/users/4433/executions/1572_996.log
== TEST (2019-03-26 20:30:34) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ * ")
print("* --- *")
print("*****")
-- OUTPUT:
*****
(* o o *)
* ^ * 
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 20:32:09) 
-- CODE:
   print("*****")
print("(* o o *)")
  print("* ^ * ")
  print("* --- *")
   print("*****")
-- ERROR:
File "XXXX", line 1
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 20:32:20) 
-- CODE:
   print("*****")
print("(* o o *)")
  print("* ^ * ")
print("* --- *")
   print("*****")
-- ERROR:
File "XXXX", line 1
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 20:34:21) 
-- CODE:
print("*****")
print("(* o o *)"
print("* ^ * ")
print("* --- *")
print("*****")
-- ERROR:
File "XXXX", line 3
    print("* ^ * ")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 21:12:25) 
-- CODE:
  print("*****")
print("(*oo*)")
print("* ^ 8")
print("")
print("")
-- ERROR:
File "XXXX", line 1
    print("*****")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 21:12:42) 
-- CODE:
  print(" ***** ")
print("(*oo*)")
print("* ^ 8")
print("")
print("")
-- ERROR:
File "XXXX", line 1
    print(" ***** ")
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 23:49:44) 
-- CODE:
print("*****")
print("(*oo*)")
print("*")
print("")
print("")
-- OUTPUT:
*****
(*oo*)
*
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:19) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:19) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:19) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:20) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:20) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:20) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:20) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:20) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:20) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:21) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:24) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:24) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:24) 
-- CODE:
print("*****")
print("(*o o*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*o o*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:24) 
-- CODE:
print("*****")
print("(*o o*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*o o*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:25) 
-- CODE:
print("*****")
print("(*o o*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*o o*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:25) 
-- CODE:
print("*****")
print("(*o o*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*o o*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:25) 
-- CODE:
print("*****")
print("(*o o*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*o o*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:25) 
-- CODE:
print("*****")
print("(*o o*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*o o*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:25) 
-- CODE:
print("*****")
print("(*o o*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*o o*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:01:37) 
-- CODE:
print("*****")
print("(*o o*)")
print("*^*")
print("*---*")
print("*****")
-- EXECUTION TIME:
0.185476
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(*o o*)
*^*
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:45) 
-- CODE:
print("*****")
print("(*o o*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*o o*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:01:55) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(*oo*)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:02:05) 
-- CODE:
print("*****")
print("(*oo*)")
print("*^*")
print("*---*")
print("*****")
-- EXECUTION TIME:
0.139372
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(*oo*)
*^*
*---*
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:02:33) 
-- CODE:
print("*****")
print("(* oo *)")
print("*^*")
print("*---*")
print("*****")
-- OUTPUT:
*****
(* oo *)
*^*
*---*
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 00:03:23) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
(* o o *)
* ^ *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:03:26) 
-- CODE:
print("*****")
print("(* o o *)")
print("* ^ *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.156372
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
* ^ *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
